--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-                     <html>
+<!DOCTYPE html>
+<html>
 <head>
   <script src="https://cdn.anychart.com/releases/v8/js/anychart-base.min.js"></script>
   <script src="https://cdn.anychart.com/releases/v8/js/anychart-ui.min.js"></script>
