--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 
       // set chart title text settings
       chart.title(
-        'Dasbor Update Konten Website unair.ac.id'
+        'Performance Konten Website unair.ac.id'
       );
 
       // set yAxis title
@@ -233,7 +233,7 @@
 
       // set chart title text settings
       chart.title(
-        'Dasbor Update Media Sosial Unair'
+        'Performance Media Sosial Unair'
       );
 
       // set yAxis title
