--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@ gapi.analytics.ready(function() {
  
   gapi.analytics.auth.authorize({
     'serverAuth': {
-      'access_token': '{{ ya29.c.KpwB7gcdBhmkFQAEr1V0jbmV_IFYaKkXbXslpBvqdOj7AFeGnj6e84ab7zFWwg-6RGrYNy2mvHbVI1J51RMtjj8uGrEqJAsWL1_pUsADbZPRIKnRUliHm4Ith_Df1TmZy8h0eLC6s_sOdCdhM9ceyY6XzlwHjSduhgP47TnalV258P4E6WkBDKcnZtu-J3VkKCc7eEyBzA835CHj5XR9 }}'
+      'access_token': ' ya29.c.KpwB7gcdBhmkFQAEr1V0jbmV_IFYaKkXbXslpBvqdOj7AFeGnj6e84ab7zFWwg-6RGrYNy2mvHbVI1J51RMtjj8uGrEqJAsWL1_pUsADbZPRIKnRUliHm4Ith_Df1TmZy8h0eLC6s_sOdCdhM9ceyY6XzlwHjSduhgP47TnalV258P4E6WkBDKcnZtu-J3VkKCc7eEyBzA835CHj5XR9 '
     }
   });
 
