--- a/index.html
+++ b/index.html
@@ -336,8 +336,8 @@ gapi.analytics.ready(function() {
 
  
   gapi.analytics.auth.authorize({
-    serverAuth: {
-      access_token: 'ya29.c.KpwB7geU6yonoafvtPZkDwckWy_NE56dEi37Xqjk0p6aAIWVxDFdA2H-xvnuCE2gLBXxbNi9pmF1zuuQz6Wr8s6ZcgQI_7W5WMSUW2DQXnU4tGuyO8D3OoHr1vLci5ttSQPZrJi7oqnn_4rZOe-vf1hTu86yJqktJ9_CA2iD-eeQY7HySEEdMzXH5INcTm4pRiB_u-_HFr9Ut-VL37RJ'
+    'serverAuth': {
+      'access_token': 'ya29.c.KpwB7geU6yonoafvtPZkDwckWy_NE56dEi37Xqjk0p6aAIWVxDFdA2H-xvnuCE2gLBXxbNi9pmF1zuuQz6Wr8s6ZcgQI_7W5WMSUW2DQXnU4tGuyO8D3OoHr1vLci5ttSQPZrJi7oqnn_4rZOe-vf1hTu86yJqktJ9_CA2iD-eeQY7HySEEdMzXH5INcTm4pRiB_u-_HFr9Ut-VL37RJ'
     }
   });
 
