--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@ gapi.analytics.ready(function() {
 	  'title': 'Pengunjung Harian unair.ac.id',
       'options': {
 		'title': 'Pengunjung Harian unair.ac.id',
-        'width': '400px'
+        'width': 50%
       }
     }
   });
