--- a/index.html
+++ b/index.html
@@ -358,8 +358,8 @@ gapi.analytics.ready(function() {
       'type': 'LINE',
 	  'title': 'Pengunjung Harian unair.ac.id',
       'options': {
-		'title': 'Pengunjung Harian unair.ac.id',
-        'width': 50%
+		
+        width: 50%
       }
     }
   });
