--- a/index.html
+++ b/index.html
@@ -359,6 +359,7 @@ gapi.analytics.ready(function() {
 	  'title': 'Pengunjung Harian unair.ac.id',
       'options': {
 		'title': 'Pengunjung Harian unair.ac.id',
+		'subtitle': 'per sesi kunjungan',
         'width': '300px'
       }
     }
