--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@ gapi.analytics.ready(function() {
   
   var dataChart2 = new gapi.analytics.googleCharts.DataChart({
     query: {
-      'ids': '168063652', // <-- Replace with the ids value for your view.
+      'ids': 'ga:168063652', // <-- Replace with the ids value for your view.
       'start-date': '30daysAgo',
       'end-date': 'yesterday',
       'metrics': 'ga:sessions',
