--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		height: 50%;
 		margin: 0;
 		padding: 10px;
-		flex: 0 50%
+		flex: 0 50%;
     }
 	#wrapper {
   display: flex;
@@ -40,6 +40,20 @@
   border-radius: 5px;
 }
 
+  #chart-1-container {
+		width: 50%;
+		height: 50%;
+		margin: 0;
+		padding: 10px;
+		
+    }
+#chart-2-container {
+		width: 50%;
+		height: 50%;
+		margin: 0;
+		padding: 10px;
+		
+    }
 
   
 </style>
