--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
 <script>
 
 jQuery.ajax({
-        type: "GET",
+        type: "POST",
         url: 'https://news.unair.ac.id/dasbor/apiapi.php',
         data: {functionname: 'access'}, 
          success:function(data) {
