--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@
 
 jQuery.ajax({
         type: "POST",
-        url: 'https://news.unair.ac.id/dasbor/apiapi.php',
+        url: 'http://news.unair.ac.id/dasbor/apiapi.php',
         data: {functionname: 'access'}, 
          success:function(data) {
         var token = data 
